# OpenGL-Learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h  imgui.ini  install.sh  main.cpp  vcpkg-configuration.json  vcpkg.json
dependencies/GL/lib/: libGLEW.2.1.0.dylib
res/models/michelle/: michelle.mtl
res/shaders/: BRDFLut.frag  BRDFLut.vert  Basic.shader  Color.frag  Color.vert  ContainerTexture.frag  ContainerTexture.shader  ContainerTexture.vert  Cubemap.frag  Cubemap.vert  CubemapSampler.frag  CubemapSampler.vert  DeferredShading.frag  Depth.frag  Depth.vert  DepthMap.frag  DepthMap.vert  DepthMap_PointShadow.frag  DepthMap_PointShadow.geom  DepthMap_PointShadow.vert  DepthMap_Screen.frag  DepthMap_Screen.vert  Explode.geom  GBuffer.frag  GeometryShader.geom  GeometryShader.vert  IrradianceConvolution.frag  LightCasters.frag  LightCasters.vert  LightCube.frag  LightCube.vert  LightingMaps.frag  Material.frag  Material.vert  ModelLoading.frag  ModelLoading.vert  NormalVisualize.frag  NormalVisualize.geom  NormalVisualize.vert  Normalized.frag  (+10 more)
src/: Application.cpp  BasicMaterial.cpp  BasicMaterial.h  BoxGeometry.cpp  BoxGeometry.h  Camera.cpp  Camera.h  Constants.h  DepthMapFBO.cpp  DepthMapFBO.h  EnvCubemapFBO.cpp  EnvCubemapFBO.h  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  Geometry.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  KeyCodes.h  Light.cpp  Light.h  Log.cpp  Log.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Postprocessing.cpp  Postprocessing.h  PostprocessingBloom.cpp  PostprocessingBloom.h  PostprocessingGBuffer.cpp  PostprocessingGBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  (+14 more)
src/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/Core/: IndexBuffer.cpp  InstanceMesh.cpp  InstanceMesh.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.h  Texture2D.cpp  Texture2D.h  TextureCubemap.cpp  TextureCubemap.h  TextureHDR.cpp  TextureHDR.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Core/Framebuffer/: Framebuffer.h  FramebufferNew.cpp  FramebufferNew.h
src/Core/Geometry/: BoxGeometry.cpp  BoxGeometry.h  Geometry.h  GrassGeometry.h  PlaneGeometry.cpp  PlaneGeometry.h  QuadGeometry.cpp  QuadGeometry.h  SkyboxGeometry.h  SphereGeometry.cpp  SphereGeometry.h
src/Core/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Core/Material/: BasicMaterial.cpp  BasicMaterial.h  CubemapMaterial.cpp  CubemapMaterial.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  ShaderMaterial.cpp  ShaderMaterial.h  StandardMaterial.cpp  StandardMaterial.h
src/Core/Shader/: Shader.cpp  Shader.h  UniformBuffer.cpp  (+1 more)
src/FileSystem/: FileSystem.cpp  FileSystem.h
src/ImGuiComponents/: ToggleButton.cpp  ToggleButton.h
src/imguiOpenGL/: imgui_impl_opengl3_loader.h
src/tests/: Test.cpp  Test.h  TestBasicLighting.cpp  TestBasicLighting.h  TestCamera.cpp  TestCamera.h  TestClearColor.cpp  TestClearColor.h  TestCoordinate.cpp  TestCoordinate.h  TestLightCasters.cpp  TestLightCasters.h  TestLightingMaps.cpp  TestLightingMaps.h  TestMaterial.cpp  TestMaterial.h  TestModel.cpp  TestModel.h  TestTexture2D.cpp  TestTexture2D.h  TestTexture2DContainer.cpp  TestTexture2DContainer.h  TestTransform.cpp  TestTransform.h
tests/: 01_TestClearColor.cpp  01_TestClearColor.h  02_TestTexture2D.cpp  02_TestTexture2D.h  03_TestTexture2DContainer.cpp  03_TestTexture2DContainer.h  04_TestTransform.cpp  04_TestTransform.h  05_TestCoordinate.cpp  05_TestCoordinate.h  06_TestCamera.cpp  06_TestCamera.h  07_TestBasicLighting.cpp  07_TestBasicLighting.h  08_TestMaterial.cpp  08_TestMaterial.h  09_TestLightingMaps.cpp  09_TestLightingMaps.h  10_TestLightCasters.cpp  10_TestLightCasters.h  11_TestModel.cpp  11_TestModel.h  12_TestDepth.cpp  12_TestDepth.h  13_TestStencil.cpp  13_TestStencil.h  14_TestBlend.cpp  14_TestBlend.h  15_TestFaceCulling.cpp  15_TestFaceCulling.h  16_TestFramebuffer.cpp  16_TestFramebuffer.h  17_TestCubemap.cpp  17_TestCubemap.h  18_TestAdvancedGLSL.cpp  18_TestAdvancedGLSL.h  19_TestGeometryShader.cpp  19_TestGeometryShader.h  20_TestInstancing.cpp  20_TestInstancing.h  (+37 more)
(+2 files in other folders)
